fix bug css on stackoverflow

--- a/right-side/css/right-side.sass
+++ b/right-side/css/right-side.sass
@@ -58,6 +58,7 @@ $z-index: 23051996
     #btn-tool-show
         width: 39px
         height: 39px
+        padding: 0 !important
         &:hover
             opacity: 1 !important
             transition: all 0.3s cubic-bezier(.25,.8,.25,1)
